2008-08-13  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkFontSelection.t
	* xs/GtkFontSelection.xs: Wrap gtk_font_selection_get_face,
	gtk_font_selection_get_face_list, gtk_font_selection_get_family,
	gtk_font_selection_get_family_list,
	gtk_font_selection_get_preview_entry, gtk_font_selection_get_size,
	gtk_font_selection_get_size_entry, and
	gtk_font_selection_get_size_list.  Use
	gtk_font_selection_dialog_get_ok_button,
	gtk_font_selection_dialog_get_apply_button, and
	gtk_font_selection_dialog_get_cancel_button if available to
	implement Gtk2::FontSelectionDialog->get_ok_button,
	get_apply_button, and get_cancel_button.  Deprecate
	Gtk2::FontSelectionDialog->ok_button, apply_button, and
	cancel_button.

	* t/GtkDialog.t
	* xs/GtkDialog.xs: Use gtk_dialog_get_content_area and
	gtk_dialog_get_action_area if available to implement
	Gtk2::Dialog->get_content_area and Gtk2::Dialog->get_action_area,
	and fallback to direct struct access otherwise.  Deprecate
	Gtk2::Dialog->vbox and Gtk2::Dialog->action_area.

2008-08-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/02.GtkContainer.t
	* xs/GtkContainer.xs: Wrap gtk_container_get_focus_child.  Allow
	undef for the focus child argument to
	gtk_container_set_focus_child.

	* t/GtkClipboard.t
	* xs/GtkClipboard.xs: Wrap gtk_clipboard_request_uris,
	gtk_clipboard_wait_for_uris, and
	gtk_clipboard_wait_is_uris_available.  Also fix the rich text
	tests.

	* t/GtkCalendar.t
	* xs/GtkCalendar.xs: Wrap gtk_calendar_set_detail_func.

2008-08-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* xs/GdkCairo.xs
	* xs/GdkProperty.xs
	* xs/GtkBuilder.xs
	* xs/GtkSelection.xs: Fix some POD glitches.

2008-08-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* t/GtkBuilder.t: Merge the UI definitions and, more importantly,
	make it work correctly with newer gtk+.

	* t/GtkBuilder.t
	* xs/GtkBuilder.xs: Wrap gtk_builder_add_objects_from_file and
	gtk_builder_add_objects_from_string.

2008-08-05  Torsten Schoenfeld  <kaffeetisch@gmx.de>
