@@ -23,12 +23,22 @@
 
 MODULE = Gtk2::Layout	PACKAGE = Gtk2::Layout	PREFIX = gtk_layout_
 
-## layout->bin_window
+=for apidoc bin_window __hide__
+=cut
+
+## GdkWindow* gtk_layout_get_bin_window (GtkLayout *layout)
 GdkWindow_ornull *
-bin_window (layout)
+get_bin_window (layout)
 	GtkLayout * layout
+    ALIAS:
+	bin_window = 1
     CODE:
+	PERL_UNUSED_VAR (ix);
+#if GTK_CHECK_VERSION (2, 13, 6) /* FIXME: 2.14*/
+	RETVAL = gtk_layout_get_bin_window (layout);
+#else
 	RETVAL = layout->bin_window;
+#endif /* 2.14 */
     OUTPUT:
 	RETVAL
 
